WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210935
Resize cursor doesn't show if there's text under the resize control
https://bugs.webkit.org/show_bug.cgi?id=210935
Summary
Resize cursor doesn't show if there's text under the resize control
Simon Fraser (smfr)
Reported
2020-04-23 14:36:30 PDT
Created
attachment 397385
[details]
Test Hover over the resize cursor in the attached testcase. You don't see the resize cursor, instead getting an iBeam.
Attachments
Test
(3.21 KB, text/html)
2020-04-23 14:36 PDT
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2022-10-29 11:24:43 PDT
It seems to be fixed with following Commit:
https://src.chromium.org/viewvc/blink?view=revision&revision=160554
It did changes here:
https://github.com/WebKit/WebKit/blob/9856bc8b756610ac4e3a4a2c480e6332f50e0cd7/Source/WebCore/page/EventHandler.cpp#L1544
___ Webkit (current): inResizer = layerRenderer.layer()->isPointInResizeControl(roundedIntPoint(result.localPoint())); Chrome Patch: inResizer = layer->isPointInResizeControl(result.roundedPointInMainFrame(), ResizerForPointer); *** Need to be changed *** inResizer = layerRenderer.layer()->isPointInResizeControl(roundedIntPoint(result.roundedPointInMainFrame(), localPoint); ___ If someone can confirm the approach, I am happy to do PR. Only problem / build error might be that it could only accept 1 argument but now we are providing it two. For that, if we can do: auto joined = roundedIntPoint(result.roundedPointInMainFrame(), localPoint); and then pass on single argument.
Ahmad Saleem
Comment 2
2022-10-29 11:25:35 PDT
To this: inResizer = layerRenderer.layer()->isPointInResizeControl(result.roundedPointInMainFrame(), localPoint);
Alexsander Borges Damaceno
Comment 3
2025-05-08 15:53:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45131
EWS
Comment 4
2025-05-14 09:23:32 PDT
Committed
294907@main
(342a27a71e7c): <
https://commits.webkit.org/294907@main
> Reviewed commits have been landed. Closing PR #45131 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2025-05-14 09:27:28 PDT
<
rdar://problem/151309503
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug