 Resize cursor doesn't show if there's text under the resize control https://bugs.webkit.org/show_bug.cgi?id=210935

Reviewed by Simon Fraser.

The resizer cursor was not appearing over the resize control when the text
was aligned to the right because it was overlapping with control resizer coordinates.
This was happening because the hit test detected the Text element when in resize control coordinates,
causing RenderText to be used for determining the cursor type.

The fix ensures that when RenderText is the hit-tested object, we use its
parent renderer instead to check if the cursor is over the resizer control.

* LayoutTests/fast/events/cursors/mouse-cursor-resizer-expected.txt: Added.
* LayoutTests/fast/events/cursors/mouse-cursor-resizer.html: Added.
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::selectCursor):
(WebCore::EventHandler::updateMouseEventTargetNode):

Canonical link: https://commits.webkit.org/294907@main